# sysrepo-ietf-interfaces

./: README.md
src/: CMakeLists.txt  config.cpp  config.hpp  if_nic_stats.cpp  if_nic_stats.hpp  main.cpp  operational.cpp  operational.hpp
tests/: Makefile  desc.xml  desc2.xml  disable.xml  enable.xml
